Added Big Oh notation table

--- a/notes/subjects/01.algorithmanalysis.md
+++ b/notes/subjects/01.algorithmanalysis.md
@@ -46,6 +46,18 @@ Skal også sies at om algoritmen er dårlig så har maskinkraft lite å si gener
 
 [Getting Sorted & Big O Notation - Computerphile](https://www.youtube.com/watch?v=kgBjXUE_Nwc)
 
-_Skriv mer her_
+
+
+| 		Growth Function 		| 	Order	 	|  Label	|
+|-----------------------------------------------|-----------------------|---------------|
+|t(n) = 17	         			|O(1)        		| constant	|
+|t(n) = 3 log n          			|O(log n) 		| logarithmic	|
+|t(n) = 20n - 4          			|O(n)        		| linear	|
+|t(n) = 12n log n + 100n 			|O(n log n)  		| n log n	| 
+|t(n) = 3n<sup>2</sup> + 5n - 2			|O(n<sup>2</sup>) 	| quadratic	|
+|t(n) = 8n<sup>3</sup> + 3n<sup>2</sup> 	|O(n<sup>3</sup>) 	| cubic		|
+|t(n) = 2<sup>n</sup> + 18n<sup>2</sup> + 3n 	|O(2<sup>n</sup>) 	| exponential	|
+
+
 
 ## 
