Fixed error in markdown syntax

--- a/notes/subjects/02.01.intro.to.collections.stacks.md
+++ b/notes/subjects/02.01.intro.to.collections.stacks.md
@@ -55,7 +55,7 @@ First we need to define what an abstraction is
 
 ### What is an abstraction
 
-An abstraction hides certain details at certain times. Using abstraction, we hide _di_stractions like having to deal with knowing what every part of the car does, or knowing everything an abstract {java, python, golang} class does.
+An abstraction hides certain details at certain times. Using abstraction, we hide _di_ -stractions like having to deal with knowing what every part of the car does, or knowing everything an abstract {java, python, golang} class does.
 
 You dont need to know every method of the Comparable class to use it to compare strings alphabetically. 
 
