Added notes for trees

--- a/notes/subjects/10.01.trees.md
+++ b/notes/subjects/10.01.trees.md
@@ -1,5 +1,81 @@
+
 # Trees
 
-A tree is a non-linear data structure, where elements are organized into a hierarchy instead of after each other as with linear structures {stacks, queues, lists}.
+A tree is a non-linear data structure, where elements are organized into a hierarchy instead of after each other as with linear structures such as a {stack, queue, list}.
+
+Ideally, a tree is made up of a set of _nodes_. The first node is called the _root_ node, and it is positioned at the top of the tree (there can only be one root) and is therefore at the top of the hierarchy. Each node can have child-nodes, called children. A node can only have one parent, but traditionally, it can have multiple children. Nodes that have the same parent are called _siblings_. 
+
+Nodes with no children are called _leaves_.
+
+## Summary of naming conventions
+
+### Nodes
+
+This is what stores data in a tree.
+
+### Edges
+
+This is what we call the lines that connects nodes to eachother
+
+### Level
+
+The name for where in the hierarchy a set of nodes (not exclusive to siblings) are. The root node is on level 0
+
+The level is also the length of the path from the root node in which you have to take to reach your destination. Count the edges and you have the level.
+
+Its as easy as counting from 0.
+
+### Root
+
+The first node in the tree. The holy grandfather, top of the hierarchy. Can only be one.
+
+### Children
+
+The nodes directly below a parent-node.
+
+### Siblings
+
+Nodes with the same parent, on the same level in the hierarchy.
+
+### Ancestors
+
+A node that is on the path to another node. When you traverse down a tree to reach node G, every node that you touch on your way down is an ancestor of G.
+
+The root is the ancestor of every node
+
+### Descendants
+
+These are nodes that can be reached by follwing the path from a specific node. If you were to start on node G and traverse down to L, then L would be a descendant of G.
+
+### Height
+
+The height of the tree is the length of the path from the root to the __leaf__ thats furthest down on the tree.
+
+Its the lowest (highest in terms of number) level.
+
+## Figures
+
+### Fig 10.01
+
+![Tree](https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Tree_%28computer_science%29.svg/421px-Tree_%28computer_science%29.svg.png)
+
+[Paddy3118](https://commons.wikimedia.org/wiki/User:Paddy3118), [Tree (computer science)](https://upload.wikimedia.org/wikipedia/commons/5/5f/Tree_%28computer_science%29.svg), [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/legalcode)
+
+### Fig 10.02
+
+
+## Tree Classifications
+
+There are multiple ways a tree can be classified. Often it is classified by the maximum number of children a node can have, sometimes referred to as the _order_ of the tree. A _general tree_ is a tree that has no limit to the number of children a node may have. 
+
+A tree with an n-limit to which a node can have children is called n-ary tree, where n is a specified value.
+
+One such tree is a binary tree (where n = 2). This is one of the most important tree types we have, and its used in many situations.
+
+Another way to classify a tree is by its balance (or lack thereof). 
+
+![Left: unbalanced, right: balanced](img/10.03.simple-unbalanced.png)
+
+> An unbalanced tree on the left, same tree balanced on the right
 
 
